# autonomous-glucose-sim

./: .gitignore  README.md  SWARM_Bolus_Demo_Guide.txt  app.py  bootstrap_repo.py.broken  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: experiment.md  feature_request.md
configs/: controller_default.yaml  pump_profiles.yaml  safety_default.yaml  simulation_default.yaml
docs/: architecture.md  controller_design.md  decision_log.md  evaluation_plan.md  index.html  physiology_model.md  project_overview.md  pump_abstraction.md  quick_reference.md  safety_logic.md  user_guide.md
src/ags/: main.py
src/ags/controller/: __init__.py  detector.py  pipeline.py  predictor.py  (+3 more)
tests/: test_basal_drift_scenario.py  test_closed_loop.py  test_controller_params.py  test_controller_pipeline.py  test_controller_predictor_smoothing.py  test_evaluation_io.py  test_evaluation_metrics.py  test_evaluation_report.py  test_evaluation_runner.py  test_explainability.py  test_iob_feedback.py  test_isf_learning_loop.py  test_new_features.py  test_patient_profiles.py  test_prebolus_dedup.py  test_pso.py  test_pump_emulator.py  test_pump_pipeline.py  test_retrospective_loader.py  test_retrospective_runner.py  test_safety_evaluator.py  test_safety_no_dose.py  test_safety_pipeline.py  test_safety_suspension.py  test_safety_trend_guard.py  test_simulation_engine.py  test_simulation_insulin.py  test_simulation_io.py  test_simulation_meal.py  test_simulation_run.py  test_simulation_scenarios.py  test_simulation_scenarios_extended.py  test_smoke.py
(+52 files in other folders)
