[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-glucose-sim"
version = "0.1.0"
description = "Proof-of-concept simulation platform for autonomous glucose-control algorithm research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "matplotlib",
  "plotly>=5.0.0",
  "streamlit>=1.40.0",
  "anthropic>=0.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
